force-app/main/default/objects/Depot__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>Date when the depot is officially open for business.</description>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>