force-app/main/default/objects/Depot__c/fields/Depot_Manager__c.field-meta.xml
<CustomField>
    <fullName>Depot_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The employee who runs the depot.</description>
    <label>Depot Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Depots</relationshipName>
    <type>Lookup</type>
</CustomField>