force-app/main/default/objects/Depot__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>The company who owns this depot.</description>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Depots</relationshipLabel>
    <relationshipName>Depots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>