force-app/main/default/objects/Depot__c/recordTypes/Depots_Associates.recordType-meta.xml
<RecordType>
    <fullName>Depots_Associates</fullName>
    <active>true</active>
    <label>Depots (Associates)</label>
</RecordType>