force-app/main/default/objects/Depot__c/recordTypes/Depots_Management.recordType-meta.xml
<RecordType>
    <fullName>Depots_Management</fullName>
    <active>true</active>
    <label>Depots (Management)</label>
</RecordType>