force-app/main/default/objects/Depot__c/listViews/Depot_List_View.listView-meta.xml
<ListView>
    <fullName>Depot_List_View</fullName>
    <columns>NAME</columns>
    <columns>Depot_Manager__c</columns>
    <columns>Address__c</columns>
    <columns>Primary_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Depot List View</label>
</ListView>